--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
   height: 100px;
   margin: 5px;
   border: 1px solid black;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-align: center;
+  line-height: 100px;
 }
 .green {
   background-color: #B2EF9B;
